# avs-projects

./: .gitignore  README
proj1/: CMakeLists.txt  MB-xlogin00.txt  advisor.sl  check_zip.sh  evaluate.sl  main.cc
proj1/calculators/: BaseMandelCalculator.cc  BaseMandelCalculator.h  BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h  RefMandelCalculator.cc
